--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -91,6 +91,7 @@
             android:layout_marginLeft="20px"
             android:layout_marginRight="20px"
             android:layout_marginTop="20px"
+            android:visibility="gone"
             android:background="@color/white">
 
             <TextView
