--- a/app/src/main/res/layout/activity_dir_out_order.xml
+++ b/app/src/main/res/layout/activity_dir_out_order.xml
@@ -45,6 +45,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.61"
+                android:id="@+id/tv_item_number"
                 android:text="@string/order_no"
                 android:textSize="16sp"/>
 
